--- a/.github/workflows/daily_analysis.yml
+++ b/.github/workflows/daily_analysis.yml
@@ -1,9 +1,9 @@
 name: 每日股票分析
 
 on:
-  # 定时触发 - 每天北京时间 18:00 (UTC 10:00)
+  # 定时触发 - 每天北京时间 12:05 和 15:05 (UTC 04:05 和 07:05)
   schedule:
-    - cron: '5 4,7 * * *'  # 周一到周五，UTC 10:00 = 北京时间 18:00
+    - cron: '5 4,7 * * *'
   
   # 手动触发
   workflow_dispatch:
